[package]
name = "carbon_nanotube"
version = "0.1.0"
edition = "2024"


#[profile.release]
#debug = 1

[profile.release]
lto = true           # Link-time optimization across crates
codegen-units = 1    # Better optimization at cost of compile time

#[profile.release]
#lto = true           # Link-time optimization across crates
#codegen-units = 1    # Better optimization at cost of compile time
#panic = "abort"      # Smaller binary, slightly faster

[dependencies]
rand = "0.10.0"
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
csv = "1.3"
log = "0.4"
flexi_logger = { version = "0.28", features = ["colors"] }
approx = "0.5.1"
rand_distr = "0.6.0"
clap = { version = "4", features = ["derive"] }
signal-hook = "0.4.4"

[features]
perf = []

[profile.release-checks]
inherits = "release"
debug-assertions = true
